# rust-tonic-jaeger-example

./: Cargo.toml  README.md  justfile
maths-add-service/: Cargo.toml
maths-add-service/src/: add.rs  main.rs
maths-client/: Cargo.toml
maths-client/src/: main.rs
maths-common/: Cargo.toml  build.rs
maths-common/proto/: add.proto  maths.proto  mul.proto
maths-common/src/: lib.rs
maths-frontend-service/: Cargo.toml
maths-frontend-service/src/: frontend.rs  main.rs
maths-mul-service/: Cargo.toml
maths-mul-service/src/: main.rs  mul.rs
