[package]
name = "maths-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio"] }
prost = "0.9.0"
tonic = "0.6.1"
tracing = "0.1.29"
tracing-opentelemetry = "0.16.0"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.6.0"
